# filmolog

./: .gitignore  README.md  movies.db  pyproject.toml  render.yaml  requirements.txt
data/: movies.db
movie_bot/: __init__.py  bot.py  commands.py  config.py  main.py  movies.db  requirements.txt
movie_bot.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
movie_bot/database/: __init__.py  db.py  queries.py
movie_bot/fsm/: __init__.py  states.py
movie_bot/handlers/: __init__.py  add_movie.py  delete.py  edit_movie.py  help.py  my_movies.py  recommend.py  restart.py  start.py  watched.py
movie_bot/keyboards/: factory.py  genre.py  main_menu.py  utils.py
movie_bot/services/: movie_service.py  user_service.py
movie_bot/utils/: commands.py  healthcheck.py  helpers.py  logger.py  pagination.py  text_builder.py  text_utils.py
